--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,11 @@
     "@types/react-dom": "^18.0.10",
     "daisyui": "^2.46.1",
     "react": "^18.2.0",
+    "react-countup": "^6.4.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-scripts": "5.0.1",
+    "react-scroll-trigger": "^0.6.14",
     "react-simple-typewriter": "^5.0.1",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
