--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-countup": "^6.4.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
     "react-scroll-trigger": "^0.6.14",
     "react-simple-typewriter": "^5.0.1",
