--- a/client/package.json
+++ b/client/package.json
@@ -11,9 +11,11 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "daisyui": "^2.46.1",
+    "firebase": "^9.15.0",
     "react": "^18.2.0",
     "react-countup": "^6.4.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.42.1",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
